# contactcmd

./: .gitignore  .gitmodules  5day.sh  Cargo.toml  DOCUMENTATION.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: release.yml  sync-tasks-to-issues.yml
docs/: .platform-config  INDEX.md  STATE.md  release-process.md
docs/5day/ai/: feynman-method.md  task-creation.md
docs/5day/scripts/: INDEX.md  ai-context.sh  check-alignment.sh  create-bug.sh  create-feature.sh  create-idea.sh  create-task.sh  validate-tasks.sh
docs/bugs/: INDEX.md  TEMPLATE-bug.md
docs/data/: INDEX.md
docs/designs/: INDEX.md  email-service.md  ui-system.md
docs/examples/: INDEX.md
docs/features/: INDEX.md  TEMPLATE-feature.md  cmd-add.md  cmd-delete.md  cmd-list.md  cmd-recent.md  cmd-search.md  cmd-show.md  cmd-sync.md  cmd-update.md  contactcmd-core.md  data-model.md  gateway.md
docs/guides/: INDEX.md  agent-gateway-integration.md  architecture.md  building-intel-releases.md  data-model.md  design-system.md  development-setup.md  recent-contacts.md
docs/ideas/: TEMPLATE-idea.md  ai-agent-gateway.md
docs/tasks/: INDEX.md  TEMPLATE-task.md
docs/tasks/backlog/: 11-google-contacts-sync.md  12-csv-import-export.md  13-vcard-sync.md  14-carddav-sync.md  20-macos-app-distribution.md  38-ensure-mac-sync-is-accurate-both-ways.md  44-tab-through-every-contact-with-a-phone-numnber-to-.md  47-expand-option-for-adding-complex-contact-informati.md  50-universal-design-system.md  51-google-email-authentication.md  52-sync-moltbot-to-cmd.md  53-todo-list-in-cli.md  57-plan-email-and-messenger-sync-tools.md  67-bring-back-search-options.md  69-email-communication-tracking.md  70-email-interactions-schema.md  71-spotlight-email-integration.md  72-gmail-metadata-fetch.md  73-outlook-integration.md  74-email-contact-matching.md  75-email-deduplication.md  76-email-sync-command.md  8-update-command-implementation.md  80-recent-messages-email-support.md
docs/tasks/done/: 46-improve-contact-edit-to-be-robust.md  63-add-person-organizations-link-insert.md
docs/tasks/live/: 1-project-setup---cargo-toml-and-directory-structure.md  10-macos-contacts-sync.md  17-create-display-module-for-contact-formatting.md  18-implement-show-command.md  19-show-command-has-hardcoded-20-result-limit.md  2-database-schema-and-migrations.md  21-extended-search-fields.md  24-ui-foundation-library.md  3-person-model-and-crud-operations.md  36-quick-note-command.md  4-list-command-implementation.md  5-search-command-implementation.md  (+2 more)
scripts/: build-release.sh
src/: lib.rs  main.rs
src/cli/: add.rs  chat.rs  checkin.rs  cleanup.rs  delete.rs  display.rs  email.rs  google_auth.rs  import.rs  learn.rs  list.rs  menu.rs  mod.rs  note.rs  photo.rs  photo_utils.rs  search.rs  setup.rs  show.rs  task.rs  ui.rs  update.rs
src/db/: gateway.rs  learn.rs  mod.rs  persons.rs  schema.rs
src/models/: address.rs  contact_detail.rs  email.rs  interaction.rs  mod.rs  note.rs  organization.rs  person.rs  phone.rs  special_date.rs  tag.rs  task.rs
src/sync/: mod.rs
src/ui/: mod.rs
website/: index.html
(+72 files in other folders)
